--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 
 .logo{
@@ -37,6 +34,49 @@
   width: 100px;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+
+#svg {
+	font-family: "Russo One", sans-serif;
+	width: 100%; height: 100%;
+}
+#svg text {
+	animation: stroke 5s infinite alternate;
+	stroke-width: 2;
+	stroke: #365FA0;
+	font-size: 100px;
+}
+@keyframes stroke {
+	0%   {
+		fill: rgba(72,138,204,0); stroke: rgb(255, 0, 0);
+		stroke-dashoffset: 25%; stroke-dasharray: 0 50%; stroke-width: 2;
+	}
+	70%  {fill: rgba(72,138,204,0); stroke: rgb(255, 0, 0); }
+	80%  {fill: rgba(72,138,204,0); stroke: rgb(255, 0, 0); stroke-width: 3; }
+	100% {
+		fill: rgb(255, 0, 0); stroke: rgba(54,95,160,0);
+		stroke-dashoffset: -25%; stroke-dasharray: 50% 0; stroke-width: 0;
+	}
+}
+
+.wrapper {background-color: #FFFFFF};
+
+.feder{
+ 
+	font-family: "Russo One", sans-serif;
+  color: rgb(255, 0, 0);
+  width: 200px;
+}
+
+
+
+
+@media screen and (max-width: 770px){
+  svg text{
+    font-size: 75px;
+  }
+}
+
 @media screen and (max-width: 450px) {
   .carou{
     height: 70vh;
@@ -46,6 +86,13 @@
   
   
   }
-
+  svg text{
+    font-size: 50px
+  }
 }
+
+
+
+
+
 
