--- a/src/App.css
+++ b/src/App.css
@@ -68,8 +68,18 @@
   width: 200px;
 }
 
-
-
+.card:hover{
+  background-color: RGB( 0, 99, 219);
+  color: white;
+  transform: scale(1.1);
+  transition: 1s;
+ 
+  -webkit-box-shadow: 5px 5px 0px 0px #ff0000, 10px 10px 0px 0px #ea5b5b, 15px 15px 0px 0px #e58080, 20px 20px 0px 0px #c88484, 25px 25px 0px 0px #E1EEFF, 50px 50px 15px 5px rgba(0,0,0,0), 50px 50px 15px 5px rgba(0,0,0,0), 50px 50px 15px 5px rgba(0,0,0,0), 50px 50px 15px 5px rgba(0,0,0,0), 50px 50px 15px 5px rgba(0,0,0,0); 
+  box-shadow: 5px 5px 0px 0px #ff0000, 10px 10px 0px 0px #ea5b5b, 15px 15px 0px 0px #e58080, 20px 20px 0px 0px #c88484, 25px 25px 0px 0px #E1EEFF, 50px 50px 15px 5px rgba(0,0,0,0), 50px 50px 15px 5px rgba(0,0,0,0), 50px 50px 15px 5px rgba(0,0,0,0), 50px 50px 15px 5px rgba(0,0,0,0), 50px 50px 15px 5px rgba(0,0,0,0);
+}
+.card:not(:hover){
+  transition: 1s;
+}
 
 @media screen and (max-width: 770px){
   #svg text{
